# greenproof-zk-esg

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE.md  CITATION.cff  LICENSE  README.md  SESSION.md  UEAP_SPEC.md  build_error.txt  hardhat.config.cjs  hardhat.config.ts.bak.2  lint_output.txt  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  test_debug.txt  test_results.txt  tsconfig.json  vercel.json  vitest.config.ts
artifacts/: AccessControl.json  CCIPBridge.json  Context.json  ERC165.json  ERC721.json  ERC721Utils.json  GreenProofNFT.json  IAccessControl.json  IERC1155Errors.json  IERC721.json  IRouterClient.json  IVerifier.json  Math.json  Panic.json  SafeCast.json  SignedMath.json  Strings.json  Verifier.json
contracts/: CCIPBridge.sol  GreenProofNFT.sol  Verifier.sol
cre/: greenproof-orchestrator.ts  workflow.ts
deployments/: arbitrum-latest.json
docs/: ARCH.md  ARCHITECTURE.md  ASSET_CATALOG.md  CHAINLINK_BUILD_APPLICATION.md  CHAIN_OF_CUSTODY.md  CONSENSUS_LOGIC.md  CRE_ALIGNMENT.md  CRE_JUDGES.md  DEMO_DISCLOSURE.md  DEPLOYMENT.md  DESIGN_SPEC_V2.md  EAP.md  ECOSYSTEM_DEGOV_ALIGNMENT.md  ETHGLOBAL_SUBMISSION.md  EVALUATOR_READINESS_AUDIT.md  FOUNDATION_CHRONICLES.md  HAAS_ARCHITECTURE.md  HACKATHON_EVALUATION.md  JUDGES_README.md  JUDGE_CHEATSHEET.md  JURIDICAL_AUDIT_TH3M1S.md  JURIDICAL_SEAL.md  MASTER_AUDIT_SUMMARY.md  MATHEMATICAL_FOUNDATION.md  MCP_SPECIFICATION.md  SCIENTIFIC_PAPER_DRAFT.md  SEVERE_AUDIT.md  (+5 more)
gpre/: Cargo.toml  SUBMISSION_STRATEGY.md  VIDEO_SCRIPT.md
gpre/src/: engine.rs  lib.rs  main.rs  models.rs
(+242 files in other folders)
