[package]
name = "gpre"
version = "0.1.0"
edition = "2021"
description = "GreenProof Rule Engine - Institutional ESG Validation Core"

[dependencies]
# Async runtime (minimal for engine logic)
tokio = { version = "1.36.0", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
